// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressToTransaction Updater AddressToTransaction Updater: handles duplicate inserts/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [
    Object {
      "id1": "APyEx5f4Zm4oCHwFWiSTaph1fPBxZacYVR",
      "id2": "12341234",
    },
  ],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`AddressToTransaction Updater AddressToTransaction Updater: handles insert/save 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [
    Object {
      "id1": "APyEx5f4Zm4oCHwFWiSTaph1fPBxZacYVR",
      "id2": "12341234",
    },
  ],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`AddressToTransaction Updater AddressToTransaction Updater: handles reverting inputs/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [
    Object {
      "id1": "APyEx5f4Zm4oCHwFWiSTaph1fPBxZacYVR",
      "id2": "12341234",
    },
  ],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`AddressToTransaction Updater AddressToTransaction Updater: handles reverting inputs/saves 2`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [
    Object {
      "id1": "APyEx5f4Zm4oCHwFWiSTaph1fPBxZacYVR",
      "id2": "12341234",
    },
    Object {
      "id1": "GIoTx5f4Zm4oCHww38hif0vofPBxZacYRT",
      "id2": "23452345",
    },
  ],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`AddressToTransaction Updater AddressToTransaction Updater: handles reverting inputs/saves 3`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [
    Object {
      "id1": "APyEx5f4Zm4oCHwFWiSTaph1fPBxZacYVR",
      "id2": "12341234",
    },
  ],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;
